--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
 }
 
 a {
-    color: black;
     text-decoration: none;
 }
 
@@ -20,6 +19,10 @@ ol {
     width: 100px;
     margin: 0;
     padding: 20px;
+}
+strong{
+    color: slateblue;
+    font-size: large;
 }
 /* 박스모델 , 크롬 개발자모드 */
 #grid {
